@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2014-09-14 r66601) -- "Unsuffered Consequences"
+R Under development (unstable) (2014-09-17 r66626) -- "Unsuffered Consequences"
 Copyright (C) 2014 The R Foundation for Statistical Computing
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
@@ -3274,8 +3274,8 @@ Error in `[.data.frame`(x, 1, c("a", "c")) : undefined columns selected
 [46] unique        unstack       within       
 > meth2gen("dendrogram")
  [1] [[            as.dendrogram as.hclust     cophenetic    cut          
- [6] labels        merge         plot          print         reorder      
-[11] rev           str          
+ [6] labels        merge         nobs          plot          print        
+[11] reorder       rev           str          
 > ## --> the output may need somewhat frequent updating..
 > 
 > 
@@ -6403,15 +6403,15 @@ function ()
 > print.function
 function (x, ...)  
  - attr(*, "srcref")=Class 'srcref'  atomic [1:8] 1 19 1 63 19 63 1 1
-  .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x46bfaa0> 
+  .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x224c7e8> 
 > f
 function ()  
  - attr(*, "srcref")=Class 'srcref'  atomic [1:8] 1 17 1 28 17 28 1 1
-  .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x46cbbb8> 
+  .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x228c690> 
  - attr(*, "note")= chr "just a note"
  - attr(*, "yada")=function ()  
   ..- attr(*, "srcref")=Class 'srcref'  atomic [1:8] 2 24 2 48 24 48 2 2
-  .. .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x46cbbb8> 
+  .. .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x228c690> 
 > rm(print.function)
 > ## auto-printing and printing differed up to R 2.9.x
 > 
